# plaster

./: .gitignore  CLAUDE.md  IDEA.md  LICENSE  pyproject.toml
plaster/: main.py
plaster/commands/: echo.py
tests/: test_cli.py
