[project]
name = "plaster"
version = "0.1.0"
description = "CLI wallpaper management"
authors = [
    {name = "AccursedGalaxy",email = "robinbohrer7@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer (>=0.24.1,<0.25.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
