[project]
name = "plaster"
version = "0.1.0"
description = "CLI wallpaper management"
authors = [
    {name = "AccursedGalaxy",email = "robinbohrer7@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = ">=0.12.5"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
ruff = "^0.6.5"
pytest = "^8.0"

[tool.poetry.scripts]
plaster = "plaster.main:app"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
